--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "PhotoCity",
-  "version": "0.1.0",
-  "description": "",
+  "name": "react-starter-kit",
+  "version": "0.3.0",
+  "description": "Get started with React, Redux, and React-Router!",
   "main": "index.js",
   "engines": {
-    "node": ">=6.0.0",
+    "node": ">=4.5.0",
     "npm": "^3.0.0"
   },
   "scripts": {
@@ -71,9 +71,9 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/bodyno/react-starter-kit.git"
   },
-  "author": "oneBite",
+  "author": "Nobody <az8321550@gmail.com> (https://bodyno.com)",
   "license": "WTFPL",
   "dependencies": {
     "babel-core": "^6.17.0",
@@ -92,6 +92,7 @@
     "fs-extra": "^1.0.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.7.0",
+    "ip": "^1.1.2",
     "json-loader": "^0.5.4",
     "node-sass": "^4.0.0",
     "normalize.css": "^5.0.0",
@@ -103,10 +104,12 @@
     "react-spinkit": "^1.1.11",
     "redux": "^3.6.0",
     "redux-thunk": "^2.0.0",
+    "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "yargs": "^6.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.0",
